--- a/package.json
+++ b/package.json
@@ -1,58 +1,38 @@
 {
-  "name": "pubquiz",
-  "version": "1.0.0",
-  "description": "Epic Discord Bot!",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "pm2 start pubquiz.js --watch",
-    "lint": "eslint .",
-    "lint-fix": "eslint . --ignore-path .gitignore --ignore-path .eslintignore --fix",
-    "dev": "nodemon pubquiz.js --ignore 'images/'"
-  },
-  "keywords": [],
-  "author": "Migush",
-  "license": "ISC",
-  "dependencies": {
-    "@google-cloud/speech": "^2.1.1",
-    "@k3rn31p4nic/google-translate-api": "^1.1.0",
-    "axios": "^0.19.0",
-    "better-sqlite3": "^5.4.1",
-    "cheerio": "^1.0.0-rc.3",
-    "cross-fetch": "^3.0.4",
-    "crypto-js": "^3.1.9-1",
-    "discord.js": "^12.2.0",
-    "discord.js-commando": "github:discordjs/Commando",
-    "dom-parser": "^0.1.6",
-    "dotenv": "^8.2.0",
-    "enmap": "^5.2.1",
-    "fast-html-parser": "^1.0.1",
-    "giphy-random": "^2.0.8",
-    "google-translate-api": "^2.3.0",
-    "google-translate-api-browser": "^1.1.71",
-    "hls.js": "^0.12.4",
-    "https": "^1.0.0",
-    "install": "^0.13.0",
-    "jsdom": "^15.2.0",
-    "klasa": "github:dirigeants/klasa",
-    "node-fetch": "^2.6.0",
-    "node-html-parser": "^1.1.16",
-    "node-opus": "^0.3.1",
-    "node-schedule": "^1.3.2",
-    "npm": "^6.12.1",
-    "objects-to-csv": "^1.3.5",
-    "pg-promise": "^10.5.2",
-    "puppeteer": "^2.0.0",
-    "puppeteer-core": "^2.0.0",
-    "request": "^2.88.0",
-    "request-promise": "^4.2.4",
-    "select-random-file": "^1.1.0",
-    "set-interval-async": "^1.0.30",
-    "translate": "^1.1.0",
-    "uuid": "^7.0.3"
-  },
-  "devDependencies": {
-    "eslint": "^6.8.0",
-    "eslint-plugin-prettier": "^3.1.3"
-  }
+	"name": "pubquiz",
+	"version": "1.0.0",
+	"description": "Epic Discord Bot!",
+	"main": "index.js",
+	"scripts": {
+		"test": "echo \"Error: no test specified\" && exit 1",
+		"start": "pm2 start pubquiz.js --watch",
+		"lint": "eslint .",
+		"lint-fix": "eslint . --ignore-path .gitignore --ignore-path .eslintignore --fix",
+		"dev": "nodemon pubquiz.js --ignore 'images/'"
+	},
+	"keywords": [],
+	"author": "Migush",
+	"license": "ISC",
+	"dependencies": {
+		"better-sqlite3": "^5.4.1",
+		"crypto-js": "^3.1.9-1",
+		"discord.js": "github:discordjs/discord.js",
+		"discord.js-commando": "github:discordjs/Commando",
+		"dotenv": "^8.2.0",
+		"install": "^0.13.0",
+		"klasa": "github:dirigeants/klasa#master",
+		"node-fetch": "^2.6.0",
+		"node-html-parser": "^1.1.16",
+		"node-opus": "^0.3.1",
+		"node-schedule": "^1.3.2",
+		"npm": "^6.12.1",
+		"objects-to-csv": "^1.3.5",
+		"pg-promise": "^10.5.2",
+		"set-interval-async": "^1.0.30",
+		"uuid": "^7.0.3"
+	},
+	"devDependencies": {
+		"eslint": "^6.8.0",
+		"eslint-plugin-prettier": "^3.1.3"
+	}
 }
