--- a/package.json
+++ b/package.json
@@ -1,10 +1,9 @@
 {
 	"name": "pubquiz",
 	"version": "1.0.0",
-	"description": "Epic Discord Bot!",
+	"description": "A Discord bot for setting up Pubquizes!",
 	"main": "index.js",
 	"scripts": {
-		"test": "echo \"Error: no test specified\" && exit 1",
 		"start": "pm2 start pubquiz.js --watch",
 		"lint": "eslint .",
 		"lint-fix": "eslint . --ignore-path .gitignore --ignore-path .eslintignore --fix",
