--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
 	"main": "index.js",
 	"scripts": {
 		"start": "pm2 start pubquiz.js --watch",
-		"lint": "eslint .",
+		"lint": "eslint . --ignore-path .gitignore --ignore-path .eslintignore",
 		"lint-fix": "eslint . --ignore-path .gitignore --ignore-path .eslintignore --fix",
 		"dev": "nodemon pubquiz.js --ignore 'images/'"
 	},
